--- a/충청남도_도시재생지원센터/html/main.html
+++ b/충청남도_도시재생지원센터/html/main.html
@@ -37,7 +37,7 @@
             <div class="header_inner">
                 <h1 class="main_logo">
                     <a href="javascript:;">
-                        <img src="../resources/images/common/main_logo.png" alt="대전광역시동부교육지원청 로고">
+                        <img src="../resources/images/common/main_logo.png" alt="충청남도 도시재생지원센터 로고">
                     </a>
                 </h1>
                 <div class="h_option">
