--- a/충청남도_도시재생지원센터/html/main.html
+++ b/충청남도_도시재생지원센터/html/main.html
@@ -34,31 +34,15 @@
     <div id="wrap">
         <!-- header -->
         <div id="header">
-            <div class="header_inner">
+            <!-- <div class="header_inner">
                 <h1 class="main_logo">
                     <a href="javascript:;">
                         <img src="../resources/images/common/main_logo.png" alt="충청남도 도시재생지원센터 로고">
                     </a>
                 </h1>
-                <div class="h_option">
-                    <ul>
-                        <li>
-                            <a href="javascript:;">HOME</a>
-                        </li>
-                        <li>
-                            <h3>글자크기</h3>
-                        </li>
-                        <li class="plus">
-                            <a href="javascript:zoomIn()">글자확대</a>
-                        </li>
-                        <li class="minus">
-                            <a href="javascript:zoomOut()">글자축소</a>
-                        </li>
-                    </ul>
-                </div>
                 <ul class="h_util">
-                    <li><a href="javascript:;" class="ico01">통합검색</a></li>
-                    <li><a href="javascript:;" class="ico02">로그인</a></li>
+                    <li><a href="javascript:;" class="ico01">LOGIN</a></li>
+                    <li><a href="javascript:;" class="ico02">JOIN</a></li>
                 </ul>
                 <div class="search_btn">
                     <a href="javascript:;">검색영역 열기</a>
@@ -87,7 +71,54 @@
                         </div>
                     </div>
                 </div>
+            </div> -->
+            <h1 class="main_logo">
+                <a href="javascript:;">
+                    <img src="../resources/images/common/main_logo.png" alt="충청남도 도시재생지원센터 로고">
+                </a>
+            </h1>
+            <div>
+                <h2 class="main_title"><img src="" alt="살기좋은 충청남도"></h2>
+                <p class="main_title_description">충청남도 도시재생지원센터가 함께합니다.</p>
             </div>
+
+             <div class="search_btn">
+                <a href="javascript:;">검색영역 열기</a>
+            </div>
+            <div class="search_wrap">
+                <div class="search_inner">
+                    <span class="search_list">
+                        <label for="total_search" class="hid">검색어 입력</label>
+                        <input type="text" name="" id="total_search" placeholder="검색어를 입력해주세요">
+                        <button type="button">검색</button>
+                    </span>
+                </div>
+                <div class="keyword_wrap">
+                    <div class="keyword_list">
+                        <div class="item"><a href="javascript:;"><span>#</span>학교찾기</a></div> 
+                        <div class="item"><a href="javascript:;"><span>#</span>선생님 찾기</a></div> 
+                        <div class="item"><a href="javascript:;"><span>#</span>유치원검색</a></div> 
+                        <div class="item"><a href="javascript:;"><span>#</span>민원신청</a></div> 
+                        <div class="item"><a href="javascript:;"><span>#</span>학교공제</a></div> 
+                        <div class="item"><a href="javascript:;">궁금한 사항은 키워드 검색</a></div> 
+                    </div>
+                    <div class="keyword_list_control">
+                        <button type="button" class="prev">이전</button>
+                        <button type="button" class="stop">정지</button>
+                        <button type="button" class="next">다음</button>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <ul class="social_list">
+                    <li><a href="javascript:;">Blog</a></li>
+                    <li><a href="javascript:;">Instagram</a></li>
+                    <li><a href="javascript:;">Facebook</a></li>
+                    <li><a href="javascript:;">Twitter</a></li>
+                </ul>
+            </div>
+            
             <!-- GNB -->
             <nav class="gnb_wrap" id="gnb">
                 <ul class="gnb_depth1">
