--- a/충청남도_도시재생지원센터/html/main.html
+++ b/충청남도_도시재생지원센터/html/main.html
@@ -82,9 +82,6 @@
                 <p class="main_title_description">충청남도 도시재생지원센터가 함께합니다.</p>
             </div>
 
-             <div class="search_btn">
-                <a href="javascript:;">검색영역 열기</a>
-            </div>
             <div class="search_wrap">
                 <div class="search_inner">
                     <span class="search_list">
@@ -93,31 +90,7 @@
                         <button type="button">검색</button>
                     </span>
                 </div>
-                <div class="keyword_wrap">
-                    <div class="keyword_list">
-                        <div class="item"><a href="javascript:;"><span>#</span>학교찾기</a></div> 
-                        <div class="item"><a href="javascript:;"><span>#</span>선생님 찾기</a></div> 
-                        <div class="item"><a href="javascript:;"><span>#</span>유치원검색</a></div> 
-                        <div class="item"><a href="javascript:;"><span>#</span>민원신청</a></div> 
-                        <div class="item"><a href="javascript:;"><span>#</span>학교공제</a></div> 
-                        <div class="item"><a href="javascript:;">궁금한 사항은 키워드 검색</a></div> 
-                    </div>
-                    <div class="keyword_list_control">
-                        <button type="button" class="prev">이전</button>
-                        <button type="button" class="stop">정지</button>
-                        <button type="button" class="next">다음</button>
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <ul class="social_list">
-                    <li><a href="javascript:;">Blog</a></li>
-                    <li><a href="javascript:;">Instagram</a></li>
-                    <li><a href="javascript:;">Facebook</a></li>
-                    <li><a href="javascript:;">Twitter</a></li>
-                </ul>
-            </div>
+            </div>            
             
             <!-- GNB -->
             <nav class="gnb_wrap" id="gnb">
@@ -402,6 +375,25 @@
         <!-- //header -->
         <!-- contents -->
         <div id="content">
+
+            <div class="social_list_wrap">
+                <ul class="social_list">
+                    <li><a href="javascript:;">Blog</a></li>
+                    <li><a href="javascript:;">Instagram</a></li>
+                    <li><a href="javascript:;">Facebook</a></li>
+                    <li><a href="javascript:;">Twitter</a></li>
+                </ul>
+            </div>
+
+            <div class="quick_menu_wrap">
+                <ul class="quick_menu_list">
+                    <li><a href="javascript:;">센터소개</a></li>
+                    <li><a href="javascript:;">사업안내</a></li>
+                    <li><a href="javascript:;">오시는길</a></li>
+                    <li><a href="javascript:;">교육신청</a></li>
+                </ul>
+            </div>
+
             <div class="m_cont01">
                 <div class="main_banner">
                     <!-- PC, tablet 메인배너 컨트롤 영역 js파일에서 생성 -->
@@ -738,6 +730,59 @@
                     </div>
                 </div>
             </div>
+
+             <div class="m_cont01">
+                
+                <div class="banner_zone">
+                    <div class="banner_zone_wrap">
+                        <div class="banner_zone_control">
+                            <h3>배너존</h3>
+                            <span class="num"></span>
+                            <div class="banner_zone_btn">
+                                <button type="button" class="prev">이전</button>
+                                <button type="button" class="stop">정지</button>
+                                <button type="button" class="next">다음</button>
+                            </div>
+                        </div>
+                        <div class="banner_zone_list">
+                            <div class="item">
+                                <a href="javascript:;" style="background:url(../resources/images/common/banner_zone01.png) no-repeat center center / cover;">국민생각함 청년의 목소리를 들어 정책으로 실현합니다 국민생각함 특별관 청년정책 제안 바로가기</a>
+                            </div>
+                            <div class="item">
+                                <a href="javascript:;" style="background:url(../resources/images/common/banner_zone02.png) no-repeat center center / cover;">국민생각함 청년의 목소리를 들어 정책으로 실현합니다 국민생각함 특별관 청년정책 제안 바로가기</a>
+                            </div>
+                            <div class="item">
+                                <a href="javascript:;" style="background:url(../resources/images/common/banner_zone03.png) no-repeat center center / cover;">국민생각함 청년의 목소리를 들어 정책으로 실현합니다 국민생각함 특별관 청년정책 제안 바로가기</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="banner_zone">
+                    <div class="banner_zone_wrap">
+                        <div class="banner_zone_control">
+                            <h3>배너존</h3>
+                            <span class="num"></span>
+                            <div class="banner_zone_btn">
+                                <button type="button" class="prev">이전</button>
+                                <button type="button" class="stop">정지</button>
+                                <button type="button" class="next">다음</button>
+                            </div>
+                        </div>
+                        <div class="banner_zone_list">
+                            <div class="item">
+                                <a href="javascript:;" style="background:url(../resources/images/common/banner_zone01.png) no-repeat center center / cover;">국민생각함 청년의 목소리를 들어 정책으로 실현합니다 국민생각함 특별관 청년정책 제안 바로가기</a>
+                            </div>
+                            <div class="item">
+                                <a href="javascript:;" style="background:url(../resources/images/common/banner_zone02.png) no-repeat center center / cover;">국민생각함 청년의 목소리를 들어 정책으로 실현합니다 국민생각함 특별관 청년정책 제안 바로가기</a>
+                            </div>
+                            <div class="item">
+                                <a href="javascript:;" style="background:url(../resources/images/common/banner_zone03.png) no-repeat center center / cover;">국민생각함 청년의 목소리를 들어 정책으로 실현합니다 국민생각함 특별관 청년정책 제안 바로가기</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <!-- //contents -->
         <!-- footer -->
@@ -745,30 +790,19 @@
             <div class="footer_link">
                 <ul class="footer_link_list">
                     <li><a href="javascript:;"><strong>개인정보처리방침</strong></a></li>
-                    <li><a href="javascript:;">저작권정책</a></li>
-                    <li><a href="javascript:;">찾아오시는길</a></li>
-                    <li><a href="javascript:;">전화번호안내</a></li>
-                    <li><a href="javascript:;">뷰어프로그램</a></li>
+                    <li><a href="javascript:;">이용약관</a></li>
+                    <li><a href="javascript:;">사이트맵</a></li>
                 </ul>
             </div>
             <div class="footer_bottom">
                 <ul class="link_sel">
                     <li>
-                        <a href="javascript:;">관내교육기관</a>
+                        <a href="javascript:;">관련사이트</a>
                         <ul class="link_sel_list">
                             <li><a href="javascript:;">관내교육기관1</a></li>
                             <li><a href="javascript:;">관내교육기관2</a></li>
                             <li><a href="javascript:;">관내교육기관3</a></li>
                             <li><a href="javascript:;">관내교육기관4</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="javascript:;">시도교육청</a>
-                        <ul class="link_sel_list">
-                            <li><a href="javascript:;">시도교육청1</a></li>
-                            <li><a href="javascript:;">시도교육청2</a></li>
-                            <li><a href="javascript:;">시도교육청3</a></li>
-                            <li><a href="javascript:;">시도교육청4</a></li>
                         </ul>
                     </li>
                 </ul>
