--- a/충청남도_도시재생지원센터/html/main.html
+++ b/충청남도_도시재생지원센터/html/main.html
@@ -213,83 +213,46 @@
                     </div>
 
                     <div class="banner_wrap">
-                        <h3>새로운 소식</h3>
-                        <div class="m_cont01">
-                            <div class="main_banner">
-                                <!-- PC, tablet 메인배너 컨트롤 영역 js파일에서 생성 -->
-                                <div class="main_banner_list">
-                                    <div class="item">
-                                        <a href="javascript:;" style="background:url(../resources/images/common/main_banner_p01.png) no-repeat center center / cover;" class="main_img_p">행복한 학교! 미래를 여는 대전동부교육 학생들이 꿈과 끼를 펼쳐 배움이 일어나고 교사가 가르침의 보람과 긍지를 느끼는 교육</a>
-                                        <a href="javascript:;" style="background:url(../resources/images/common/main_banner_t01.png) no-repeat center center / cover;" class="main_img_t">행복한 학교! 미래를 여는 대전동부교육 학생들이 꿈과 끼를 펼쳐 배움이 일어나고 교사가 가르침의 보람과 긍지를 느끼는 교육</a>
-                                        <a href="javascript:;" style="background:url(../resources/images/common/main_banner_m01.png) no-repeat center center / cover;" class="main_img_m">행복한 학교! 미래를 여는 대전동부교육 학생들이 꿈과 끼를 펼쳐 배움이 일어나고 교사가 가르침의 보람과 긍지를 느끼는 교육</a>
-                                    </div>
-                                    <div class="item">
-                                        <a href="javascript:;" style="background:url(../resources/images/common/main_banner_p02.png) no-repeat center center / cover;" class="main_img_p">행복한 학교! 미래를 여는 대전동부교육 학생들이 꿈과 끼를 펼쳐 배움이 일어나고 교사가 가르침의 보람과 긍지를 느끼는 교육</a>
-                                        <a href="javascript:;" style="background:url(../resources/images/common/main_banner_t02.png) no-repeat center center / cover;" class="main_img_t">행복한 학교! 미래를 여는 대전동부교육 학생들이 꿈과 끼를 펼쳐 배움이 일어나고 교사가 가르침의 보람과 긍지를 느끼는 교육</a>
-                                        <a href="javascript:;" style="background:url(../resources/images/common/main_banner_m02.png) no-repeat center center / cover;" class="main_img_m">행복한 학교! 미래를 여는 대전동부교육 학생들이 꿈과 끼를 펼쳐 배움이 일어나고 교사가 가르침의 보람과 긍지를 느끼는 교육</a>
-                                    </div>
-                                    <div class="item">
-                                        <a href="javascript:;" style="background:url(../resources/images/common/main_banner_p03.png) no-repeat center center / cover;" class="main_img_p">행복한 학교! 미래를 여는 대전동부교육 학생들이 꿈과 끼를 펼쳐 배움이 일어나고 교사가 가르침의 보람과 긍지를 느끼는 교육</a>
-                                        <a href="javascript:;" style="background:url(../resources/images/common/main_banner_t03.png) no-repeat center center / cover;" class="main_img_t">행복한 학교! 미래를 여는 대전동부교육 학생들이 꿈과 끼를 펼쳐 배움이 일어나고 교사가 가르침의 보람과 긍지를 느끼는 교육</a>
-                                        <a href="javascript:;" style="background:url(../resources/images/common/main_banner_m03.png) no-repeat center center / cover;" class="main_img_m">행복한 학교! 미래를 여는 대전동부교육 학생들이 꿈과 끼를 펼쳐 배움이 일어나고 교사가 가르침의 보람과 긍지를 느끼는 교육</a>
-                                    </div>
+                        <div class="banner_zone">
+                            <h3 class="banner_info">새로운 <strong>소식</strong></h3>
+                            <div class="banner_zone_wrap">
+                                <div class="banner_zone_control">
+                                    <div class="banner_zone_btn">
+                                        <button type="button" class="prev">이전</button>
+                                        <button type="button" class="next">다음</button>
+                                        <button type="button" class="stop">정지</button>
+                                    </div>                                    
+                                    <div class="num"></div>
                                 </div>
-                                <div class="m_main_arrow">
-                                    <button type="button" class="prev">이전</button>
-                                    <button type="button" class="next">다음</button>
-                                </div>
-                            </div>
-                            <div class="banner_zone">
-                                <div class="banner_zone_wrap">
-                                    <div class="banner_zone_control">
-                                        <h3>배너존</h3>
-                                        <span class="num"></span>
-                                        <div class="banner_zone_btn">
-                                            <button type="button" class="prev">이전</button>
-                                            <button type="button" class="stop">정지</button>
-                                            <button type="button" class="next">다음</button>
-                                        </div>
-                                    </div>
-                                    <div class="banner_zone_list">
-                                        <div class="item">
-                                            <a href="javascript:;" style="background:url(../resources/images/common/banner_zone01.png) no-repeat center center / cover;">국민생각함 청년의 목소리를 들어 정책으로 실현합니다 국민생각함 특별관 청년정책 제안 바로가기</a>
-                                        </div>
-                                        <div class="item">
-                                            <a href="javascript:;" style="background:url(../resources/images/common/banner_zone02.png) no-repeat center center / cover;">국민생각함 청년의 목소리를 들어 정책으로 실현합니다 국민생각함 특별관 청년정책 제안 바로가기</a>
-                                        </div>
-                                        <div class="item">
-                                            <a href="javascript:;" style="background:url(../resources/images/common/banner_zone03.png) no-repeat center center / cover;">국민생각함 청년의 목소리를 들어 정책으로 실현합니다 국민생각함 특별관 청년정책 제안 바로가기</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="link_group">
-                                <div class="link_group_list">
+                                <div class="banner_zone_list">
                                     <div class="item">
-                                        <a href="javascript:;" class="ico01">제증명<br/>접수예약</a>
+                                        <a href="javascript:;">충청남도 도시재생을 위해 충남도시재생지원센터가 함께합니다. 바로가기
+                                            <div class="_text">충남도시재생지원센터 홈페이지 오픈</div>
+                                            <div class="_bg" style="background:url(../resources/images/common/banner_bg01.png) no-repeat 0 0; background-size: cover;"></div>
+                                        </a>
                                     </div>
                                     <div class="item">
-                                        <a href="javascript:;" class="ico02">전입학안내</a>
-                                    </div>
-                                    <div class="item">
-                                        <a href="javascript:;" class="ico03">학원 및<br/>공익법인안내</a>
-                                    </div>
-                                    <div class="item">
-                                        <a href="javascript:;" class="ico04">유치원<br/>인가안내</a>
-                                    </div>
-                                    <div class="item">
-                                        <a href="javascript:;" class="ico05">교육환경<br/>보호구역안내</a>
-                                    </div>
-                                    <div class="item">
-                                        <a href="javascript:;" class="ico06">청렴사랑방</a>
-                                    </div>
-                                    <div class="item">
-                                        <a href="javascript:;" class="ico07">학교알리미</a>
+                                        <a href="javascript:;">충청남도 도시재생을 위해 충남도시재생지원센터가 함께합니다. 바로가기
+                                            <div class="_text">충남도시재생지원센터 홈페이지 오픈</div>
+                                            <div class="_bg" style="background:url(../resources/images/common/banner_bg01.png) no-repeat 0 0; background-size: cover;"></div>
+                                        </a>
+                                    </div><div class="item">
+                                        <a href="javascript:;">충청남도 도시재생을 위해 충남도시재생지원센터가 함께합니다. 바로가기
+                                            <div class="_text">충남도시재생지원센터 홈페이지 오픈</div>
+                                            <div class="_bg" style="background:url(../resources/images/common/banner_bg01.png) no-repeat 0 0; background-size: cover;"></div>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="m_cont02">
+                        <div>
+                            <ul>
+                                <li><a href="#none"></a></li>
+                                <li><a href="#none"></a></li>
+                                <li><a href="#none"></a></li>
+                            </ul>
+                        </div>
+                        <!-- <div class="m_cont02">
                             <div class="con_wrap">
                                 <ul class="ico_list">
                                     <li><a href="javascript:;" class="ico01">Wee 센터</a></li>
@@ -549,7 +512,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
 
@@ -570,10 +533,10 @@
 
     <!-- Javascript -->
     <script type="text/javascript" src="../resources/js/jquery-1.11.3.min.js"></script>
-    <!-- <script type="text/javascript" src="../resources/js/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="../resources/js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="../resources/js/slick.js"></script>
     <script type="text/javascript" src="../resources/js/common.js"></script>
-    <script type="text/javascript" src="../resources/js/jquery.mCustomScrollbar.js"></script> -->
+    <script type="text/javascript" src="../resources/js/jquery.mCustomScrollbar.js"></script>
     <script>
     
     </script>
