--- a/충청남도_도시재생지원센터/html/main.html
+++ b/충청남도_도시재생지원센터/html/main.html
@@ -245,12 +245,17 @@
                                 </div>
                             </div>
                         </div>
-                        <div>
-                            <ul>
-                                <li><a href="#none"></a></li>
-                                <li><a href="#none"></a></li>
-                                <li><a href="#none"></a></li>
+                        <div class="tab_wrap">
+                            <ul class="tab_list">
+                                <li class="is_active _first"><a href="#none"><strong>교육과정</strong> 안내</a></li>
+                                <li><a href="#none"><strong>컨설팅</strong> 안내</a></li>
+                                <li class="_last"><a href="#none"><strong>센터</strong> 소식</a></li> 
                             </ul>
+                            <div class="tab_layer_wrap">
+                                <div class="tab_layer is_active">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+                                <div class="tab_layer">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+                                <div class="tab_layer">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+                            </div>
                         </div>
                         <!-- <div class="m_cont02">
                             <div class="con_wrap">
